<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/logolagash"
        android:orientation="vertical"
        android:padding="@dimen/padding_horizontal_login">

        <android.support.design.widget.TextInputLayout
            android:paddingTop="@dimen/padding_vertical_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"

            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:passwordToggleEnabled="true"

            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"


                />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_login"
            android:theme="@style/RaisedButtonDark" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/dontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@color/editTextColorWhite"
                android:textSize="@dimen/textsize_donthaveaccount"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/createHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/dontHaveAccount"
                android:text="@string/create_here"
                android:textColor="@color/editTextColorWhite"
                android:textSize="@dimen/textsize_donthaveaccount"
                android:textStyle="bold"
                android:onClick="goCreateAccount"

                />

        </RelativeLayout>


    </LinearLayout>








</android.support.design.widget.CoordinatorLayout>