<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:carview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardpicture"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    carview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

     <ImageView
         android:id="@+id/picturecard"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_cardview"
         android:background="@drawable/cerveza"
         android:scaleType="centerCrop"
         />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/background_text_card"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_card"
                android:textSize="@dimen/textsize_card_tittle"
                android:textColor="@color/editTextColorWhite"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/firsword_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    />

                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/timecard_marginleftcard"
                    android:text="@string/likenumber_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/firsword_textsize" />


            </LinearLayout>

        </LinearLayout>


    </FrameLayout>



</android.support.v7.widget.CardView>